# scennia

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruffignore  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml  scennia.code-workspace  sweep_config.yaml  sweep_config_run2.yaml
docs/: code_reference.md  index.md  train_model.md  web_app_data_flow.md
model/: metadata.json
src/scennia/: __init__.py  app.py  main.py  preprocessing.py  train_model.py
src/scennia/app/: __init__.py  data.py  figure.py  image.py  layout.py  model.py  timer.py
tests/: test_main.py
